entrega feature 3